--- a/css/main.css
+++ b/css/main.css
@@ -15,4 +15,5 @@ Use as a global or base stylesheet.
 /* positioning formats */.row:after {content: "";display: table;clear: both;}
 /* graphical formats */.card {background-color: white;padding: 30px;margin-top: 20px;}
 /* button */.disabled {opacity: 0.6;cursor: not-allowed;}.button {background-color: slategray;border: none;color: white;padding: 15px 36px;text-align: center;text-decoration: none;display: inline-block;font-size: 15px;width: auto;height: auto;}
+/* avatars */.avatar{width: 100px;height: 100px;border-radius: 50%;border-width: 4px;border-color: skyblue;border-style: solid;}
 /* footer + header */.footer {padding: 20px;text-align: center;background: dimgray;margin-top: 20px;margin-bottom: 20px;}.footer-text {font-size: 10px;color: white;}.header {padding: 30px;font-size: 20px;/* text-align: center; */background: white;}
