--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,12 @@ Main CSS Document
 
 Use as a global or base stylesheet. 
 */
-/* font imports */@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i');
+/* font imports */@import url('https://fonts.googleapis.com/css?family=Montserrat:400,400i&display=swap');
 /* main */body {font-family: 'Montserrat', sans-serif;background-color: rgb(64, 64, 64);}.background {-webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;-ms-background-size: cover;background-size: cover;/*-webkit-filter: blur(0px);-moz-filter: blur(0px);-o-filter: blur(0px);-ms-filter: blur(0px);filter: blur(0px);*/position: fixed;width: 100%;height: 100%;top: 0;left: 0;z-index: -1;}
 /* texts config */h1, h2, h3, h4, h5, h6 {color: black;}p, a, li {color: dimgray;}
 /* has no reason to exist but im keeping it anyways */.smol {font-size: 6px;}
-/* navbar */#logo-icon {padding-top: 5px;padding-right: 50px;float: left;}.topnav {overflow: hidden;background-color: dimgray;padding-left: 50px;}.topnav a {float: left;color: #f2f2f2;text-align: center;padding: 14px 16px;text-decoration: none;font-size: 17px;}.topnav a:hover {background-color: lightgreen;color: black;}.topnav a.active {background-color: skyblue;color: white;}
-/* icons */.project-icons {max-width: 64px; max-height: 64px;}
+/* navbar */#logo-icon {padding-top: 5px;padding-right: 50px;float: left;}.topnav {overflow: hidden;background-color: dimgray;padding-left: 50px;}.topnav a {float: left;color: #f2f2f2;text-align: center;padding: 14px 16px;text-decoration: none;font-size: 17px;}.topnav a:hover {background-color: #7caf6b;color: white;}.topnav a.active {background-color: #6ea0a0;color: white;}
+/* icons */.project-icons {width: 64px; height: 64px;}
 /* alerts */.alert {padding: 20px;background-color: #2688c9; color: white;margin-bottom: 15px;}.closebtn {margin-left: 15px;color: white;font-weight: bold;float: right;font-size: 22px;line-height: 20px;cursor: pointer;transition: 0.3s;}.closebtn:hover {color: black;}
 /* collapsibles */.collapsible {background-color: #777;color: white;cursor: pointer;padding: 18px;width: 100%;border: none;text-align: left;outline: none;font-size: 15px;}.collapsible:after {content: '\002B';color: white;font-weight: bold;float: right;margin-left: 5px;}.active, .collapsible:hover {background-color: #555;}.content {padding: 0 18px;max-height: 0;overflow: hidden;transition: max-height 0.2s ease-out;background-color: #f1f1f1;}
 /* text on image */.container {position: relative;text-align: center;color: white;}.bottom-left {position: absolute;bottom: 1px;left: 16px;}.top-left {position: absolute;top: 8px;left: 16px;}.top-right {position: absolute;top: 8px;right: 16px;}.bottom-right {position: absolute;bottom: 8px;right: 16px;}.centered {/* use with caution, will overlap ontop of others */position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);}.center {display: block;margin-left: auto;margin-right: auto;width: 95%;}
