--- a/css/schema.css
+++ b/css/schema.css
@@ -143,6 +143,7 @@ button {
 .footer {
     margin-left: 40px;
     margin-right: 40px;
-}.footer-text {
+}
+.footer-text {
     margin-left: 40px;
 }
