--- a/css/schema.css
+++ b/css/schema.css
@@ -1,10 +1,7 @@
 /*
-Schema CSS Document
+Main CSS Document
 
-Dark themed stylesheet with  F U T U R I S T I C  design made for documentation.
-Link this stylesheet after the main stylesheet, as Schema will overwrite stylings.
-
-Also used for the main page, because it required similar design elemenets.
+A merger of the original SCHEMA and NEWLINE stylesheets.
 */
 /* font imports */
 /* @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap'); */
@@ -12,9 +9,24 @@ Also used for the main page, because it required similar design elemenets.
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
 @import url("/resources/fonts/JetBrainsMono-SemiLight.ttf");
 /* main */
+:root { 
+    --body-background-color: #282828;
+    --schema-background-color: #32302f;
+    --background-element-color: #3c3836;
+    --element-color: #504945;
+    --element-hover-color: #7c6f64;
+    --element-highlight-color: #665c54;
+    --header-color: #ebdbb2;
+    --paragraph-color: #d5c4a1;
+    --outline-color: var(--header-color);
+}
+html {
+    scroll-behavior: smooth !important;
+}
 body {
     font-family: 'Inconsolata', monospace;
-    background-color: rgb(32,32,32);
+    background-color: var(--body-background-color);
+    overflow-y: scroll;
 }
 .schema {
     padding: 40px;
@@ -22,12 +34,27 @@ body {
     margin-right: 2%;
     margin-top: 1%;
     margin-bottom: 1%;
-    background-color: rgb(48, 48, 48);
+    background-color: var(--schema-background-color);
+}
+.background {
+    /* for background images */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -ms-background-size: cover;
+    background-size: cover;
+    /*-webkit-filter: blur(0px);-moz-filter: blur(0px);-o-filter: blur(0px);-ms-filter: blur(0px);filter: blur(0px);*/
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
 }
 /* texts config */
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Open Sans', sans-serif;
-    color: white;
+    color: var(--header-color);
 }
 h1 {
     text-align: left;
@@ -36,37 +63,137 @@ h1 {
 h3 {
     margin-top: 40px;
 }
-p, a, li {
-    color: whitesmoke;
+p, a, li, i, b {
+    color: var(--paragraph-color);
 }
-button {
+.hint {
+    font-size: 0.7rem;
+    color: #a89984;
+}
+.button, button {
+    border: none;
+    color: var(--paragraph-color);
+    background-color: var(--element-color);
+    padding: 15px 36px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    width: auto;
+    height: auto;
     font-family: 'Inconsolata', monospace;
 }
+.button:hover, button:hover {
+    background-color: var(--element-hover-color);
+}
+.disabled {
+    opacity: 0.6;
+    cursor: not-allowed;
+}
+/* positioning formats */
+.row {
+    display: flex;
+    flex-wrap: wrap;
+}
+.column {
+    flex: 40%;
+    margin-right: 1%;
+}
+@media (max-width: 600px) {
+    /* responsive */
+    .column {
+        flex: 100%;
+    }
+} 
 /* topnav */
 .topnav {
     margin-left: 2%;
     margin-right: 2%;
-    background-color: rgb(52, 52, 52);
+    background-color: var(--element-color);
+    overflow: hidden;
+    padding-left: 50px;
+}
+.topnav a {
+    float: left;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.topnav a:hover {
+    background-color: #8ec07c;
+    color: #3c3836;
+}
+.topnav a:active {
+    background-color: #83a598;
 }
 /* collapsibles */
 .collapsible {
-    background-color: rgb(52,52,52);
+    background-color: var(--element-color);
     margin-top: 5px;
     font-family: 'Inconsolata', monospace;
+    color: var(--paragraph-color);
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
 }
 .collapsible:after {
     content: '▼';
-    color: white;
+    color: var(--paragraph-color);
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
 }
 .active, .collapsible:hover {
-    background-color: rgb(64,64,64);
+    background-color: var(--element-hover-color);
 }
 .content {
-    background-color: rgb(80,80,80);
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.2s ease-out;
+    background-color: var(--element-highlight-color);
 }
 /* graphical formats */
 .card {
-    background-color: rgb(42, 42, 42);
+    padding: 30px;
+    margin-top: 1.5%;
+    background-color: var(--background-element-color);
+}
+.bridge-card {
+    margin-top: 60%;
+    position: sticky;
+    top: 0;
+    margin-top: 1.5%;
+}
+@media (max-width: 100px) {
+    .bridge-card .button {
+        width: 50%;
+    }
+}
+@media (max-width: 860px) {
+    .bridge-card {
+        max-height: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+} 
+/* icons */
+.project-icons {
+    width: 64px;
+    height: 64px;
+}
+.avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border-width: 2px;
+    border-color: var(--outline-color);
+    border-style: solid;
 }
 /* badges */
 .badges {
@@ -80,7 +207,7 @@ button {
     clear: both;
     display: table;
 }
-/* code quotes */
+/* code quotes TODO FOR DEPRECATION */
 .code-quote {
     background-color: rgb(38,38,38);
     padding-bottom: 1px;
@@ -88,7 +215,7 @@ button {
     padding-right: 5px;
     border-radius: 4px;
     font-family : 'JetbrainsMono', monospace;
-    color: rgb(220, 220, 220)
+    color: var(--paragraph-color);
 }
 .code-block {
     background-color: rgb(35,35,35);
@@ -98,40 +225,14 @@ button {
     padding-right: 5px;
     border-radius: 5px;
     font-family: 'JetBrainsMono', monospace;
+    color: var(--paragraph-color);
 } 
 .code-block p {
     margin: 2px 0;
 }
-.command {
-    color: rgb(210,210,255);
-}
-.statement{
-    color: rgb(197,144,230);
-}
-.string {
-    color: rgb(143,175,72);
-}
-.function {
-    color: rgb(90,124,218);
-}
-.brace {
-    color: rgb(107,181,206);
-}
-.number {
-    color: orange;
-}
-.boolean {
-    color: rgb(197,144,230);
-}
-.comment {
-    color: rgb(140,140,140)
-}
-.comma {
-    color:orange;
-}
-/* blockquotes */
 .block-quote {
     background-color: rgb(45,45,45);
+    color: var(--paragraph-color);
     padding-bottom: 5px;
     padding-top: 5px;
     padding-left: 20px;
@@ -139,11 +240,108 @@ button {
     border-radius: 5px;
     border-left: 10px solid rgb(120,120,120);
 }
+/* alerts */
+.alert {
+    padding: 20px;
+    background-color: #536d8a; 
+    color: white;
+    margin-bottom: 15px;
+}
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
 /* footer mod */
 .footer {
     margin-left: 40px;
     margin-right: 40px;
 }
-.footer-text {
+.footer-text, .footer p {
+    font-size: 11px;
     margin-left: 40px;
+}
+/* has no reason to exist but im keeping it anyways */
+.smol {
+    font-size: 6px;
+}
+/*
+Merger from the,
+"Anime" CSS Document
+
+░░▒▒▓▓██->
+
+Contains transitions and standard animations.
+Animations have vendor prefixes for -ms-, -webkit-, -moz-, and -o-.
+
+README: .ease-up breaks element positioning due to movement, use only on body (probably)
+
+TODO: implement fade out with link calls
+*/
+
+.fade-in {
+    animation: fade-in 1s;
+    -ms-animation: fade-in 1s;
+    -webkit-animation: fade-in 1s;
+    -moz-animation: fade-in 1s;
+    -o-animation: fade-in 1s;
+}
+.fade-out {
+    animation: fade-in 1s;
+    -ms-animation: fade-in 1s;
+    -webkit-animation: fade-in 1s;
+    -moz-animation: fade-in 1s;
+    -o-animation: fade-in 1s;
+    animation-direction: reverse; /* saves on line count */
+    -ms-animation-direction: reverse;
+    -webkit-animation-direction: reverse;
+    -moz-animation-direction: reverse;
+    -o-animation-direction: reverse;
+}
+@keyframes fade-in {
+    from {opacity:0;} to {opacity:1;}
+}
+@-ms-keyframes fade-in {
+    from {opacity:0;} to {opacity:1;}
+}
+@-webkit-keyframes fade-in {
+    from {opacity:0;} to {opacity:1;}
+}
+@-moz-keyframes fade-in {
+    from {opacity:0;} to {opacity:1;}
+}
+@-o-keyframes fade-in {
+    from {opacity:0;} to {opacity:1;}
+}
+.ease-up {
+    animation: ease-up 1s;
+    -ms-animation: ease-up 1s;
+    -webkit-animation: ease-up 1s;
+    -moz-animation: ease-up 1s;
+    -o-animation: ease-up 1s;
+    animation-timing-function: ease;
+    -ms-animation-timing-function: ease;
+    -webkit-animation-timing-function: ease;
+    -moz-animation-timing-function: ease;
+    -o-animation-timing-function: ease;
+}
+@keyframes ease-up {
+    from {top: 2rem;} to {top: 0rem;}
+}
+@-ms-keyframes ease-up {
+    from {top: 2rem;} to {top: 0rem;}
+}
+@-webkit-keyframes ease-up {
+    from {top: 2rem;} to {top: 0rem;}
+}
+@-moz-keyframes ease-up {
+    from {top: 2rem;} to {top: 0rem;}
+}
+@-o-keyframes ease-up {
+    from {top: 2rem;} to {top: 0rem;}
 }
