--- a/css/schema.css
+++ b/css/schema.css
@@ -13,6 +13,7 @@ A merger of the original SCHEMA and NEWLINE stylesheets.
     --body-background-color: #282828;
     --schema-background-color: #32302f;
     --background-element-color: #3c3836;
+    --code-background-color: #32302f;
     --element-color: #504945;
     --element-hover-color: #7c6f64;
     --element-highlight-color: #665c54;
@@ -50,6 +51,9 @@ body {
     top: 0;
     left: 0;
     z-index: -1;
+}
+hr {
+    border-color: var(--outline-color);
 }
 /* texts config */
 h1, h2, h3, h4, h5, h6 {
@@ -104,7 +108,12 @@ p, a, li, i, b {
     .column {
         flex: 100%;
     }
-} 
+}
+/* decorators */
+.deco_vertical {
+    border-left: 5px solid;
+    height: 100%;
+}
 /* topnav */
 .topnav {
     margin-left: 2%;
@@ -207,44 +216,32 @@ p, a, li, i, b {
     clear: both;
     display: table;
 }
-/* code quotes TODO FOR DEPRECATION */
-.code-quote {
-    background-color: rgb(38,38,38);
-    padding-bottom: 1px;
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 4px;
+/* code quotes */
+.code-quote, .code-block {
+    background-color: var(--code-background-color);
     font-family : 'JetbrainsMono', monospace;
     color: var(--paragraph-color);
+    padding-left: 5px;
+    padding-right: 5px;
+}
+.code-quote {
+    padding-bottom: 1px;
+    border-radius: 4px;
 }
 .code-block {
-    background-color: rgb(35,35,35);
     padding-bottom: 10px;
     padding-top: 10px;
-    padding-left: 20px;
-    padding-right: 5px;
     border-radius: 5px;
-    font-family: 'JetBrainsMono', monospace;
-    color: var(--paragraph-color);
+    padding-left: 15px;
 } 
 .code-block p {
     margin: 2px 0;
-}
-.block-quote {
-    background-color: rgb(45,45,45);
-    color: var(--paragraph-color);
-    padding-bottom: 5px;
-    padding-top: 5px;
-    padding-left: 20px;
-    padding-right: 5px;
-    border-radius: 5px;
-    border-left: 10px solid rgb(120,120,120);
 }
 /* alerts */
 .alert {
     padding: 20px;
     background-color: #536d8a; 
-    color: white;
+    color: var(--outline-color);
     margin-bottom: 15px;
 }
 .closebtn {
