--- a/css/schema.css
+++ b/css/schema.css
@@ -7,27 +7,43 @@ A merger of the original SCHEMA and NEWLINE stylesheets.
 /* @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
-@import url("/resources/fonts/JetBrainsMono-SemiLight.ttf");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300&display=swap');
 /* main */
 :root { 
     --body-background-color: #282828;
     --schema-background-color: #32302f;
     --background-element-color: #3c3836;
-    --code-background-color: #32302f;
     --element-color: #504945;
     --element-hover-color: #7c6f64;
     --element-highlight-color: #665c54;
     --header-color: #ebdbb2;
     --paragraph-color: #d5c4a1;
     --outline-color: var(--header-color);
+    --code-background-color: var(--element-color);
 }
 html {
     scroll-behavior: smooth !important;
+    scrollbar-width: thin;
+    scrollbar-color: var(--element-highlight-color) #1d2021;
 }
 body {
     font-family: 'Inconsolata', monospace;
     background-color: var(--body-background-color);
     overflow-y: scroll;
+}
+::-webkit-scrollbar {
+    background-color: #1d2021;
+    max-width: 0.75em;
+    max-height: 0.75em;
+}
+::-webkit-scrollbar-corner {
+    background-color: var(--schema-background-color);
+}
+::-webkit-scrollbar-thumb {
+    background-color: var(--element-highlight-color);
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--element-hover-color);
 }
 .schema {
     padding: 40px;
@@ -94,25 +110,64 @@ p, a, li, i, b {
     opacity: 0.6;
     cursor: not-allowed;
 }
-/* positioning formats */
+/* 
+positioning formats 
+i have no idea how "min-width: 0;" fixed all of my <pre> issues, but it did
+for my personal wellbeing, please never remove it
+*/
 .row {
     display: flex;
     flex-wrap: wrap;
+    min-width: 0;
 }
 .column {
     flex: 40%;
     margin-right: 1%;
+    min-width: 0;
 }
-@media (max-width: 600px) {
+.column-majority {
+    flex: 95%;
+}
+/*
+#sketchbook {
+    display: flex;
+}
+.sketchbook-item {
+    flex: 27%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+*/
+@media (max-width: 1100px) {
     /* responsive */
     .column {
         flex: 100%;
     }
 }
+/*
+@media (max-width: 1000px) {
+    .sketchbook-item {
+        flex: 100%;
+        justify-content: center;
+    }
+}
+*/
 /* decorators */
-.deco_vertical {
+.deco-vertical {
     border-left: 5px solid;
     height: 100%;
+}
+.deco-vertical-flex {
+    flex: 1%;
+}
+.deco-red {
+    border-color: #fb4934;
+}
+.deco-orange {
+    border-color: #fe8019;
+}
+.deco-yellow {
+    border-color: #fabd2f;
 }
 /* topnav */
 .topnav {
@@ -190,7 +245,21 @@ p, a, li, i, b {
         padding: 0;
         overflow: hidden;
     }
-} 
+}
+.message-box {
+    border: 0.1rem solid var(--outline-color);
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+}
+.message-box-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
 /* icons */
 .project-icons {
     width: 64px;
@@ -217,26 +286,26 @@ p, a, li, i, b {
     display: table;
 }
 /* code quotes */
-.code-quote, .code-block {
+pre, code, .code-quote {
     background-color: var(--code-background-color);
-    font-family : 'JetbrainsMono', monospace;
     color: var(--paragraph-color);
     padding-left: 5px;
     padding-right: 5px;
 }
-.code-quote {
+code, .code-quote {
     padding-bottom: 1px;
     border-radius: 4px;
 }
-.code-block {
-    padding-bottom: 10px;
+pre {
+    background-color: var(--code-background-color);
+    white-space: pre;
+    overflow: auto;
     padding-top: 10px;
+    padding-bottom: 5px;
     border-radius: 5px;
-    padding-left: 15px;
-} 
-.code-block p {
-    margin: 2px 0;
+    min-width: 0;
 }
+
 /* alerts */
 .alert {
     padding: 20px;
