--- a/projects/bandage/docs/_static/css/insegel.css
+++ b/projects/bandage/docs/_static/css/insegel.css
@@ -1,28 +1,51 @@
-@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,500");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans');
 @import url("https://fonts.googleapis.com/css?family=Inconsolata");
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
+:root {
+  --bg: #282828;
+  --bg_s: #32302f;
+  --bg_h: #1d2021;
+  --bg1: #3c3836;
+  --bg2: #504945;
+  --bg3: #665c54;
+  --fg1: #ebdbb2;
+  --fg2: #d5c4a1;
+  --red: #fb4934;
+  --blue: #83a598;
+}
+
+::-webkit-scrollbar {
+  background-color: var(--bg_h);
+  max-width: 0.75em;
+  max-height: 0.75em;
+}
+
+::-webkit-scrollbar-corner {
+  background-color: var(--bg_s);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #665c54;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #7c6f64;
+}
+
+html {
+  font-family: 'Inconsolata', monospace;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Open Sans', sans-serif;
+  color: var(--fg1);
+}
+
+p, a, li, i, b {
+  color: var(--fg2);
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -33,6 +56,43 @@ footer, header, hgroup, menu, nav, section {
 
 body {
   line-height: 1;
+  background-color: var(--bg_s);
+}
+
+header {
+  padding-top: 2em;
+  margin-bottom: 2.25em;
+  display: flex;
+}
+header #logo-container {
+  width: 300px;
+  padding-left: 2em;
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 1000px) {
+  header #logo-container {
+    width: 250px;
+  }
+}
+@media screen and (max-width: 880px) {
+  header #logo-container {
+    width: 100%;
+    padding: 0;
+    display: block;
+  }
+}
+header #logo-container img {
+  height: 60px;
+}
+header #project-container {
+  padding: 0em 2em;
+}
+@media screen and (max-width: 880px) {
+  header {
+    text-align: center;
+    display: block;
+  }
 }
 
 ol, ul {
@@ -54,36 +114,6 @@ table {
   border-spacing: 0;
 }
 
-body {
-  background: #F2F2F2;
-  font-family: "IBM Plex Sans", serif;
-  line-height: 1.5;
-  font-size: 18px;
-}
-@media screen and (max-width: 880px) {
-  body {
-    background: #F2F2F2;
-  }
-}
-
-h1, h2, h3, h4, h5 {
-  font-weight: 300;
-  margin-bottom: 1em;
-  margin-top: 1em;
-}
-
-h1 {
-  font-size: 2em;
-}
-
-h2 {
-  font-size: 1.5em;
-}
-
-h3 {
-  font-size: 1.35em;
-}
-
 a {
   text-decoration: none;
   color: inherit;
@@ -96,7 +126,7 @@ a.headerlink {
 }
 
 a:hover:not(.headerlink) {
-  border-bottom: 2px solid #2D2D2D;
+  border-bottom: 2px solid var(--fg1);
 }
 
 p {
@@ -133,10 +163,13 @@ ul ul {
 
 pre {
   font-family: "Inconsolata", monospace;
-  background-color: #DADADA;
-  color: #2D2D2D;
+  background-color: var(--bg2);
   padding: 2em;
   margin-bottom: 1em;
+}
+
+.literal-block {
+  color: var(--fg1);
 }
 
 img {
@@ -159,8 +192,8 @@ table th, table td {
 }
 
 table tbody tr:nth-of-type(odd) {
-  background-color: #DADADA;
-  color: #2D2D2D;
+  background-color: var(--bg1);
+  color: var(--fg1);
 }
 
 pre code {
@@ -172,13 +205,17 @@ code {
   max-width: 100%;
   padding: 2px;
   font-family: "Inconsolata", monospace;
-  background-color: #DADADA;
-  color: #2D2D2D;
+  background-color: var(--bg2);
+  color: var(--fg1);
 }
 
 table tbody tr:nth-of-type(odd) code {
-  background-color: #F2F2F2;
-  color: #2D2D2D;
+  background-color: var(--bg);
+  color: var(--fg1);
+}
+
+#copyright p {
+  font-size: 1em;
 }
 
 #insegel-container {
@@ -210,24 +247,24 @@ table tbody tr:nth-of-type(odd) code {
 }
 
 #main-content-container, #side-menu-container {
-  background-color: #F2F2F2;
+  background-color: var(--bg1);
 }
 
 #main-content {
   padding: 2em;
+  padding-top: 0em;
 }
-#main-content .figure {
-  text-align: center;
-}
+
 #main-content h1:first-child {
   display: none;
 }
 
+#main-content .figure {
+  text-align: center;
+}
+
 #main-content-header {
   padding: 2em 2em 0 2em;
-}
-#main-content-header h1 {
-  margin: 0;
 }
 
 #side-menu-container {
@@ -292,7 +329,6 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 #side-menu .local-toc ul ul {
   margin-top: 1em;
   text-transform: none;
-  font-family: "IBM Plex Sans", serif;
 }
 #side-menu .local-toc ul ul a {
   font-weight: 400;
@@ -311,40 +347,37 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
   padding-left: 0px;
 }
 
-#search {
-  padding: 2em;
-}
 #search input[type=text] {
   width: 100%;
-  font-weight: 300;
-  font-size: 2em;
+  font-weight: 200;
+  font-size: 1.25em;
   box-sizing: border-box;
   border: none;
-  background-color: #F2F2F2;
-  color: #2D2D2D;
-  font-family: "IBM Plex Sans", serif;
+  background-color: var(--bg2);
+  color: var(--fg1);
+  font-family: "Inconsolata", monospace;
 }
 #search input[type=text]::placeholder {
-  color: #a5a5a5;
-  font-weight: 300;
+  color: var(--fg2);
+  font-weight: 200;
 }
 
 .admonition {
   padding: 2em;
   margin-bottom: 2em;
-  background-color: #2D2D2D;
-  color: #EBEBEB;
+  background-color: var(--bg1);
+  color: var(--fg1);
 }
 .admonition .admonition-title {
   font-weight: 500;
 }
 .admonition.warning, .admonition.caution, .admonition.danger, .admonition.error {
-  background-color: #CD4949;
-  color: #2D2D2D;
+  background-color: var(--red);
+  color: var(--fg1);
 }
 .admonition.attention, .admonition.important {
-  background-color: #49CDAC;
-  color: #2D2D2D;
+  background-color: var(--blue);
+  color: var(--fg1);
 }
 
 .injected {
@@ -361,41 +394,6 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
 
 .figure {
   margin-bottom: 1em;
-}
-
-header {
-  padding-top: 2em;
-  display: flex;
-}
-header #logo-container {
-  width: 300px;
-  padding-left: 2em;
-  display: flex;
-  align-items: center;
-}
-@media screen and (max-width: 1000px) {
-  header #logo-container {
-    width: 250px;
-  }
-}
-@media screen and (max-width: 880px) {
-  header #logo-container {
-    width: 100%;
-    padding: 0;
-    display: block;
-  }
-}
-header #logo-container img {
-  height: 60px;
-}
-header #project-container {
-  padding: 0em 2em;
-}
-@media screen and (max-width: 880px) {
-  header {
-    text-align: center;
-    display: block;
-  }
 }
 
 footer {
@@ -415,7 +413,7 @@ footer a#menu-toggle {
   cursor: pointer;
 }
 footer a#menu-toggle.toggled {
-  color: #DADADA;
+  color: var(--bg1);
 }
 footer ul#build-details {
   list-style: none;
@@ -452,8 +450,8 @@ footer ul#build-details li:not(:last-child):after {
 #search-results ul.search .context {
   margin-top: 1em;
   white-space: pre-line;
-  background-color: #DADADA;
-  color: #2D2D2D;
+  background-color: var(--bg1);
+  color: var(--fg1);
   padding: 2em;
 }
 #search-results ul.search .context .highlighted {
@@ -467,8 +465,8 @@ dl:not(.docutils) dd dl {
   margin-bottom: 1em;
 }
 dl:not(.docutils) dt {
-  background: #2D2D2D;
-  color: #EBEBEB;
+  background: var(--bg1);
+  color: var(--fg1);
   padding: 0.5em;
   padding-right: 0.75em;
   margin-bottom: 1em;
@@ -478,187 +476,32 @@ dl:not(.docutils) dt .property {
   margin-right: 0.5em;
 }
 dl:not(.docutils) dt code {
-  background: #2D2D2D;
-  color: #EBEBEB;
+  background: var(--bg1);
+  color: var(--fg1);
   font-weight: bold;
   padding: 0px;
 }
 dl:not(.docutils) dl dt {
-  background: #DADADA;
-  color: #2D2D2D;
-  border-left: 0.25em solid #2D2D2D;
+  background: var(--bg1);
+  color: var(--fg1);
+  border-left: 0.25em solid var(--fg1);
 }
 dl:not(.docutils) dl dt code {
-  background: #DADADA;
-  color: #2D2D2D;
-}
-
-.c {
-  font-style: italic;
+  background: var(--bg1);
+  color: var(--fg1);
 }
 
 /* Comment */
 .err {
-  border: 1px solid #FF0000;
+  border: 1px solid var(--red);
 }
 
-/* Error */
-.k {
-  font-weight: bold;
-}
-
-/* Keyword */
-.cm {
-  font-style: italic;
-}
-
-/* Comment.Multiline */
-.c1 {
-  font-style: italic;
-}
-
-/* Comment.Single */
-.cs {
-  font-style: italic;
-}
-
-/* Comment.Special */
-.ge {
-  font-style: italic;
-}
-
-/* Generic.Emph */
-.gh {
-  font-weight: bold;
-}
-
-/* Generic.Heading */
-.gp {
-  font-weight: bold;
-}
-
-/* Generic.Prompt */
-.gs {
-  font-weight: bold;
-}
-
-/* Generic.Strong */
-.gu {
-  font-weight: bold;
-}
-
-/* Generic.Subheading */
-.kc {
-  font-weight: bold;
-}
-
-/* Keyword.Constant */
-.kd {
-  font-weight: bold;
-}
-
-/* Keyword.Declaration */
-.kn {
-  font-weight: bold;
-}
-
-/* Keyword.Namespace */
-.kr {
-  font-weight: bold;
-}
-
-/* Keyword.Reserved */
-.s {
-  font-style: italic;
-}
-
-/* Literal.String */
-.nc {
-  font-weight: bold;
-}
-
-/* Name.Class */
-.ni {
-  font-weight: bold;
-}
-
-/* Name.Entity */
-.ne {
-  font-weight: bold;
-}
-
-/* Name.Exception */
-.nn {
-  font-weight: bold;
-}
-
-/* Name.Namespace */
-.nt {
-  font-weight: bold;
-}
-
-/* Name.Tag */
-.ow {
-  font-weight: bold;
-}
-
-/* Operator.Word */
-.sb {
-  font-style: italic;
-}
-
-/* Literal.String.Backtick */
-.sc {
-  font-style: italic;
-}
 
 /* Literal.String.Char */
-.sd {
+.sd, .s2, .se, .sh, .si, .sx, .sr, .s1, .ss, .sc, .sb, .s, .ge, .cs, .c1, .cm, .c {
   font-style: italic;
 }
 
-/* Literal.String.Doc */
-.s2 {
-  font-style: italic;
-}
-
-/* Literal.String.Double */
-.se {
+.se, .si, .ow, .nt, .nn, .ne, .ni, .nc, .kr, .kn, .kd, .kc, .gu, .gs, .gp, .gh, .k {
   font-weight: bold;
-  font-style: italic;
 }
-
-/* Literal.String.Escape */
-.sh {
-  font-style: italic;
-}
-
-/* Literal.String.Heredoc */
-.si {
-  font-weight: bold;
-  font-style: italic;
-}
-
-/* Literal.String.Interpol */
-.sx {
-  font-style: italic;
-}
-
-/* Literal.String.Other */
-.sr {
-  font-style: italic;
-}
-
-/* Literal.String.Regex */
-.s1 {
-  font-style: italic;
-}
-
-/* Literal.String.Single */
-.ss {
-  font-style: italic;
-}
-
-/* Literal.String.Symbol */
-
-/*# sourceMappingURL=insegel.css.map */
